@@ -386,6 +386,10 @@
   '(menu-item "global-linum-mode" global-linum-mode
               :enable (fboundp 'global-linum-mode)
               :button (:toggle . global-linum-mode)))
+(define-key minormode-sub-menu [viper-mode]
+  '(menu-item "viper-mode" toggle-viper-mode
+              :enable (fboundp 'toggle-viper-mode)
+              :button (:toggle . viper-mode)))
 (define-key toggle-toolbar-menu [minor-mode]
   (list 'menu-item "Minor mode" minormode-sub-menu))
 
